my_mqtt/build/log/idf_py_stdout_output_16116
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\asogw\Desktop\esp32\my_mqtt\build\bootloader\esp-idf\esptool_py && C:\Users\asogw\Desktop\esp32\esp32idf\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/asogw/Desktop/esp32/my_mqtt/build/bootloader/bootloader.bin"
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/9] Building C object esp-idf/wifi/CMakeFiles/__idf_wifi.dir/src/app_wifi.c.obj
FAILED: esp-idf/wifi/CMakeFiles/__idf_wifi.dir/src/app_wifi.c.obj 
ccache C:\Users\asogw\Desktop\esp32\esp32idf\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -IC:/Users/asogw/Desktop/esp32/my_mqtt/build/config -IC:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/newlib/platform_include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include/freertos -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc/esp32 -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/. -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/private_include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/heap/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/log/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/soc/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/soc/esp32/. -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/soc/esp32/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/hal/esp32/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/hal/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/hal/platform_port/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_rom/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_rom/include/esp32 -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_rom/esp32 -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_common/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_system/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_system/port/soc -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_system/port/include/private -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/xtensa/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/xtensa/esp32/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/lwip/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/lwip/include/apps -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/lwip/include/apps/sntp -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/lwip/lwip/src/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include/arch -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_wifi/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_event/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_phy/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_phy/esp32/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_netif/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/nvs_flash/include -IC:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2/components/esp_partition/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/asogw/Desktop/esp32/my_mqtt=. -fmacro-prefix-map=C:/Users/asogw/Desktop/esp32/esp32idf/frameworks/esp-idf-v5.0.2=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.2-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/wifi/CMakeFiles/__idf_wifi.dir/src/app_wifi.c.obj -MF esp-idf\wifi\CMakeFiles\__idf_wifi.dir\src\app_wifi.c.obj.d -o esp-idf/wifi/CMakeFiles/__idf_wifi.dir/src/app_wifi.c.obj -c C:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/src/app_wifi.c
C:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/src/app_wifi.c: In function 'appwifi_connect':
C:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/src/app_wifi.c:14:19: warning: unsigned conversion from 'int' to 'unsigned char' changes value from '1234' to '210' [-Woverflow]
   14 | #define WIFI_SSID 1234
      |                   ^~~~
C:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/src/app_wifi.c:68:21: note: in expansion of macro 'WIFI_SSID'
   68 |             .ssid = WIFI_SSID,
      |                     ^~~~~~~~~
C:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/src/app_wifi.c:15:19: warning: unsigned conversion from 'int' to 'unsigned char' changes value from '1234' to '210' [-Woverflow]
   15 | #define WIFI_PASS 1234
      |                   ^~~~
C:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/src/app_wifi.c:69:25: note: in expansion of macro 'WIFI_PASS'
   69 |             .password = WIFI_PASS,
      |                         ^~~~~~~~~
C:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/src/app_wifi.c:66:33: error: missing braces around initializer [-Werror=missing-braces]
   66 |     wifi_config_t wifi_config = {
      |                                 ^
C:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/src/app_wifi.c:66:33: error: missing braces around initializer [-Werror=missing-braces]
C:/Users/asogw/Desktop/esp32/my_mqtt/components/wifi/src/app_wifi.c:66:33: error: missing braces around initializer [-Werror=missing-braces]
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
